@@ -855,7 +855,6 @@ new_greatest_weight:
 	    }
 #endif
 	}
-	percent_scale *= 100.0;
     }
 
     LOGLINE(MATCH,
@@ -1073,9 +1072,10 @@ new_greatest_weight:
     // is any more.  If we keep or find references we won't need to mess with
     // is_heap so much maybe?
     if (!items.empty() && collapser && !collapser.empty()) {
-	// Nicked this formula from above, but for some reason percent_scale
-	// has since been multiplied by 100 so we take that into account
-	double min_wt = percent_cutoff_factor / (percent_scale / 100);
+	// Nicked this formula from above.
+	double min_wt = 0.0;
+	if (percent_scale > 0.0)
+	    min_wt = percent_cutoff_factor / percent_scale;
 	Xapian::doccount entries = collapser.entries();
 	vector<Xapian::Internal::MSetItem>::iterator i;
 	for (i = items.begin(); i != items.end(); ++i) {
@@ -1101,5 +1101,5 @@ new_greatest_weight:
 				       uncollapsed_estimated,
 				       max_possible, greatest_wt, items,
 				       termfreqandwts,
-				       percent_scale));
+				       percent_scale * 100.0));
 }
